--- a/lol/index.html
+++ b/lol/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Hello Coursera</title>
 </head>
 <body>
 <h1>Hello this is Saurabh.</h1>
-<h1>Hiiii</h1>>
+<h1>Hiiii </h1>>
 </body>
 </html>
